--- a/Client/Reacts/my-app/package.json
+++ b/Client/Reacts/my-app/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
+    "dotenv": "^16.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
@@ -41,11 +42,13 @@
     "@babel/preset-react": "^7.22.5",
     "@testing-library/react": "^14.0.0",
     "babel-jest": "^29.6.1",
-    "jest": "^27.5.1"
+    "jest": "^27.5.1",
+    "node-polyfill-webpack-plugin": "^2.0.1"
   },
   "babel": {
     "presets": [
       "@babel/preset-react"
     ]
   }
+  
 }
